--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -10,9 +10,6 @@
   </div>
 </div>
 
-
-
-
 <section class="vh-100 animated-section" >
     <div class="container py-5 h-100">
       <div class="row d-flex align-items-center justify-content-center h-100">
@@ -57,17 +54,8 @@
             </div>
   
             <!-- Submit button -->
-            <button type="submit" class="btn btn-danger btn-lg btn-block mx-auto d-block" [disabled] = "form.invalid" (click)="onSubmit(form)">Sign in</button>
-  
-           
-  
+            <button type="submit" class="btn btn-danger btn-lg btn-block mx-auto d-block" [disabled] = "form.invalid" (click)="onPressLogin(form)">Sign in</button>
           </form>
-
-
-
-
-
-      
 
         </div>
       </div>
