--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -73,7 +73,14 @@
 
         <div class="row mt-5">
 
-
+          <div class="row justify-content-end" *ngIf="id!=undefined">
+            <div class="col-2">
+              <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#mahisiva">Add Admin</button>
+            </div>
+          </div>
+          
+          
+          <!-- id="exampleModal-41"     -->
 
           <div class="col-xl-3 col-lg-6" (click)="toggleUserTableVisibility()">
             <div class="card card-stats mb-4 mb-xl-0" style="margin-top: 50px; margin-bottom: 30px;">
@@ -131,7 +138,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Subscribed Users</h5>
-                    <span class="h2 font-weight-bold mb-0">2</span>
+                    <span class="h2 font-weight-bold mb-0">0</span>
                   </div>
                   <div class="col-auto">
                     <div class="badge">
@@ -178,7 +185,9 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Total Videos</h5>
-                    <span class="h2 font-weight-bold mb-0">{{ all_newChefVideos }}</span>
+                    <!-- <span class="h2 font-weight-bold mb-0">{{ all_newChefVideos }}</span> -->
+                    <span class="h2 font-weight-bold mb-0">10</span>
+
                   </div>
                   <div class="col-auto">
                     <div class="badge">
@@ -417,3 +426,126 @@
   </div>
 </div>
 
+
+
+
+
+
+<!-- popup for add admin -->
+
+
+
+
+
+
+<div
+  class="modal fade"
+  id="mahisiva"
+  tabindex="-4"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+    <div class="modal-content finnup__profile-modal">
+      <form #form2="ngForm">
+        <div class="modal-header border-0">
+          <div
+            class="finnup__modal-title"
+            style="margin: auto; text-align: center"
+          >
+            <h3 class="modal-title display-2" id="exampleModalLabel">
+              Add Team Members
+            </h3>
+
+            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true" style="font-size: 40px;">&times;</span>
+            </button>
+           
+          </div>
+     
+         
+        </div>
+        <div>
+          <div class="modal-body border-0">
+            <div class="row mt-25">
+              <div class="col-lg-10 mt-20" style="margin: auto">
+                <label>Name <span class="text-danger">*</span></label>
+                <div class="input-group">
+                  <input
+                    type="text"
+                    autocomplete="off"
+                    class="form-control"
+                    placeholder="Enter name"
+                    required
+                    [(ngModel)]="model.userName"
+                    name="userName"
+                   
+                   
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row mt-20">
+              <div class="col-lg-10 mb-4" style="margin: auto">
+                <label>Email<span class="text-danger">*</span> </label>
+
+                <div class="input-group">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Enter email id "
+                    required
+                    [(ngModel)]="model.email"
+                    autocomplete="off"
+                   
+                    name="email" 
+                  
+                   
+                    />
+                </div>
+              </div>
+        
+
+              <div class="col-lg-10 mb-4" style="margin: auto">
+                <label>Password <span class="text-danger">*</span></label>
+                <div class="input-group">
+                  <input
+                    type="text"
+                    autocomplete="off"
+                    required
+                    [(ngModel)]="model.password"
+                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$"
+                    class="form-control"
+                    placeholder="Enter Password"
+                    name="password" 
+                   
+                  
+                  />
+                </div>
+              </div>
+
+            
+
+            </div>
+
+            <div class="col-12 text-center pt-30">
+        
+              <button style="margin-left: 15px;"
+              type="submit"
+              class="btn btn-primary s-bor mb-30"
+              [disabled] = "form2.invalid" (click)="AddAdmin(form2)"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+              id="reloaded">
+              Save/Send mail
+            </button>
+            </div>
+
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- end of modal  -->
