--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -1,11 +1,11 @@
 
-<div class="toast collapse opacity1" id="collapseExample" style="background-color: red;">
+<div class="toast collapse opacity1" id="collapseExample" style="background-color: rgb(255, 255, 255);">
     <div class="toast-body">
        {{errormsg}}
     </div>
   </div>
   
-  <div class="toast collapse opacity1"  id="collapseExample1" style="background-color: red;">
+  <div class="toast collapse opacity1"  id="collapseExample1" style="background-color: rgb(255, 255, 255);">
     <div class="toast-body">
        {{successmsg}}
     </div>
