--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -72,12 +72,13 @@
       <div class="pt-5">
 
         <div class="row mt-5">
-
-          <div class="row justify-content-end" *ngIf="id!=undefined">
+        
+          <div class="row justify-content-end" *ngIf="role == 'Superadmin'">
             <div class="col-2">
               <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#mahisiva">Add Admin</button>
             </div>
           </div>
+          
           
           
           <!-- id="exampleModal-41"     -->
