--- a/src/app/common_widgets/leftnav/leftnav.component.html
+++ b/src/app/common_widgets/leftnav/leftnav.component.html
@@ -163,17 +163,17 @@
   <div id="mySidebar" class="fin-nav_sidebar pt-3">
     <ul class="navbar-nav fin-navbar-nav justify-content-end flex-grow-1 pt5">
       <li class="nav-item fin_nav-item " (click)="Dashboard()">
-        <a class="nav-link fin_nav-link " aria-current="page" routerLink="/rmhome" routerLinkActive="active" >
+        <a class="nav-link fin_nav-link " aria-current="page" routerLinkActive="active" >
           <i class="ph ph-house nav-img"></i>
           Dashboard</a>
       </li>
-      <li class="nav-item fin_nav-item" (click)="companydirectors()">
-        <a class="nav-link fin_nav-link new" aria-current="page" routerLink="/mgbbyrm" routerLinkActive="active">
+      <li class="nav-item fin_nav-item" (click)="manageTeam()">
+        <a class="nav-link fin_nav-link new" aria-current="page" routerLinkActive="active">
           <i class="ph ph-user nav-img "></i>
           Manage Leads</a>
       </li>
       <li class="nav-item fin_nav-item" (click)="shareholding()">
-        <a class="nav-link fin_nav-link" aria-current="page" routerLink="/mglbyrm" routerLinkActive="active">
+        <a class="nav-link fin_nav-link" aria-current="page"  routerLinkActive="active">
           <i class="ph ph-bank nav-img"></i>
           Create Template</a>
       </li>
@@ -182,6 +182,16 @@
           routerLinkActive="active">
           <i class="ph ph-monitor-play nav-img"></i>
           <span>Video Verification</span>
+        </a>
+      </li>
+
+
+
+      <li class="nav-item fin_nav-item" (click)="VideosComponent()">
+        <a class="nav-link fin_nav-link" aria-current="page" routerLink="/assigned"
+          routerLinkActive="active">
+          <i class="ph ph-monitor-play nav-img"></i>
+          <span>Manage Domain</span>
         </a>
       </li>
     </ul>
