--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,7 +50,9 @@
 
 
 <app-adminheader></app-adminheader>
-
+<div class="sidebarContainer">
+ 
+</div>
 <div class="row hik">
 
   <div class="col-2 mt-5">
