encrypted coorectly  asign in manageadmin completed

--- a/src/app/common_widgets/adminheader/adminheader.component.html
+++ b/src/app/common_widgets/adminheader/adminheader.component.html
@@ -96,6 +96,17 @@
                     </a>
                     
               </a>
+<!-- 
+              <a class="dropdown-item d-flex align-items-center">
+                <i class="bi bi-box-arrow-right"></i>
+  
+           
+
+                    <a class="dropdown-item l-o" (click)="confirmLogout()">
+                      <span style="margin-left: 30px; font-size: 16px;">Sign Out</span>
+                    </a>
+                    
+              </a> -->
   
             </li>
   
