--- a/src/app/common_widgets/leftnav/leftnav.component.html
+++ b/src/app/common_widgets/leftnav/leftnav.component.html
@@ -172,7 +172,7 @@
           <i class="ph ph-user nav-img "></i>
           Manage Leads</a>
       </li>
-      <li class="nav-item fin_nav-item" (click)="shareholding()">
+      <li class="nav-item fin_nav-item" (click)="TemplatesComponent()">
         <a class="nav-link fin_nav-link" aria-current="page"  routerLinkActive="active">
           <i class="ph ph-bank nav-img"></i>
           Create Template</a>
@@ -186,14 +186,14 @@
       </li>
 
 
-
-      <li class="nav-item fin_nav-item" (click)="VideosComponent()">
+<!-- 
+      <li class="nav-item fin_nav-item" >
         <a class="nav-link fin_nav-link" aria-current="page" routerLink="/assigned"
           routerLinkActive="active">
           <i class="ph ph-monitor-play nav-img"></i>
           <span>Manage Domain</span>
         </a>
-      </li>
+      </li> -->
     </ul>
   </div>
 
