--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -164,11 +164,24 @@
 
                                     </select> -->
 
+
+
+
+
+                                    <!-- siva -->
                                     <select class="form-select" [(ngModel)]="dishSelect" aria-label="Default select example">      
                                         <option selected>Select</option>
                                         <option *ngFor="let name1 of mainDishArray11" value="{{name1.name}}" > {{name1.name}}</option>
                                        
                                     </select>
+
+                                    <!-- mahi -->
+
+            
+                                        <!-- ... other code ... -->
+                                    
+                                   
+
 
                                     <!-- <div class="col-lg-2"> -->
                                         <!-- <select class="form-select" [(ngModel)]="mainDishArray"  > -->
