--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -135,13 +135,13 @@
 
 
 
-          <div class="col-xl-3 col-lg-6" style="margin-top: 50px; margin-bottom: 30px;">
+          <div class="col-xl-3 col-lg-6" style="margin-top: 50px; margin-bottom: 30px;" (click) = "toggleSubscribedUsersTableVisibility()">
             <div class="card card-stats mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Subscribed Users</h5>
-                    <span class="h2 font-weight-bold mb-0">0</span>
+                    <span class="h2 font-weight-bold mb-0">{{totalCountSubscribed}}</span>
                   </div>
                   <div class="col-auto">
                     <div class="badge">
@@ -239,7 +239,9 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Approved Videos</h5>
-                    <span class="h2 font-weight-bold mb-0">{{ all_notapproved_videos }}</span>
+                    <!-- <span class="h2 font-weight-bold mb-0">{{ all_notapproved_videos }}</span> -->
+                    <span class="h2 font-weight-bold mb-0">{{ all_notapproved_videos.length }}</span>
+
                   </div>
                   <div class="col-auto">
                     <div class="badge">
@@ -383,6 +385,8 @@
       <th scope="col">Mobile Number</th>
       <th scope="col">User Type</th>
 
+      <th scope="col" *ngIf="role == 'Superadmin'">Actions</th>
+
 
 
 
@@ -397,7 +401,62 @@
       <td>{{admins.mobileNumber}}</td>
       <td>{{admins.userType}}</td>
   
+      <td *ngIf="role == 'Superadmin'"> 
+        <div class="d-flex justify-content-between">
+     
+          <button class="btn btn-outline-danger"  (click)="deleteAdmin(admins.id)">Delete</button>
+         
 
+        </div>
+      </td>
+
+
+
+    </tr>
+  
+    
+  </tbody>
+</table>
+</div>
+
+
+
+<!-- list of suscribed users  -->
+<div class="col-l-9 mt-5 mx-auto d-block" *ngIf="isSuscribedUsersTableVisible">
+  <h3>List of Suscribed Users</h3> 
+  <table class="table table-bordered" >
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Mobile Number</th>
+      <th scope="col">User Type</th>
+
+      <th scope="col">Actions</th>
+
+
+
+
+
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let suUsers of all_suscribed_users">
+      <th scope="row">{{suUsers.id}}</th>
+      <td>{{suUsers.userName}}</td>
+      <td>{{suUsers.email}}</td>
+      <td>{{suUsers.mobileNumber}}</td>
+      <td>{{suUsers.userType}}</td>
+  
+      <td > 
+        <div class="d-flex justify-content-between">
+     
+          <button class="btn btn-outline-danger"  (click)="deleteAdmin(suUsers.id)">Delete</button>
+         
+
+        </div>
+      </td>
 
 
 
@@ -552,3 +611,7 @@
   </div>
 </div>
 <!-- end of modal  -->
+
+
+<!--  -->
+
