--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -105,13 +105,13 @@
                                                 {{ showMoreVideosnew ? 'Less' : 'More' }}
                                               </button>
 
-                                              <button class="btn float-end btn-danger" *ngIf="AtLeastTwoSelected()" [disabled]="!AtLeastTwoSelected()" data-bs-toggle="modal" data-bs-target="#MAHESHASIGN">Assign</button>
+                                              <button class="btn float-end btn-danger" *ngIf="AtLeastTwoSelected()" [disabled]="!AtLeastTwoSelected()" data-bs-toggle="modal" data-bs-target="#MAHESHASIGN" >Assign</button>
 
 
                                             </div>
                                           </div>
                                           <div class="row">
-                                            <span class="form-check form-check-inline">
+                                            <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'">
                                               <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
                                               <label class="form-check-label" for="selectAllCheckbox">Select All</label>
                                             </span>
@@ -132,7 +132,7 @@
                                                   <img *ngIf="video.productType != 'Veg'" src="../../assets/img/non-veg.png" class="inline-image small-image" alt="{{ video.productType }}" />
                                                 </p>
                                     
-                                                <span class="form-check form-check-inline">
+                                                <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'">
                                                   <input class="form-check-input" type="checkbox" id="inlineCheckbox{{i}}" [(ngModel)]="video.selected" [disabled]="selectAllChecked" (change)="onCheckChangeAssign(video.id)">
                                                   <label class="form-check-label" for="inlineCheckbox{{i}}">Assign</label>
                                                 </span>
@@ -379,21 +379,21 @@
           <label for="assignToDropdown" class="form-label">Assign To</label>
           <select class="form-select" id="assignToDropdown" [(ngModel)]="selectedAssignee"  name="assignToDropdown">
             <option value="" disabled selected>Select</option>
-            <option *ngFor="let admin of all_admindetails" [value]="admin.id">{{ admin.userName }}</option>
+            <option *ngFor="let admin of admindetails" [value]="admin.id">{{ admin.userName }}</option>
           </select>
         </div>
         
    
         <div class="mb-3">
           <label for="descriptionInput" class="form-label">Description</label>
-          <input type="text" class="form-control" id="descriptionInput"  name="descriptionInput">
+          <input type="text" class="form-control" id="descriptionInput"  name="descriptionInput" autocomplete="off">
         </div>
 
       </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary"  (click) ="asignvideo()">Assign</button>
+        <button type="button" class="btn btn-primary"  (click) ="asignvideo()" data-bs-dismiss="modal">Assign</button>
       </div>
     </div>
   </div>
