--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -128,7 +128,7 @@
     font-size: 14px;
     line-height: 18px;
     align-items: center;
-    padding: 16px;
+    /* padding: 16px; */
     /* Black */
     border: none;
     
