--- a/src/styles.css
+++ b/src/styles.css
@@ -55,4 +55,4 @@ div#collapseExample1 {
   }
   
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow: auto;overflow-x: hidden;}
