--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -51,18 +51,38 @@
 
 </style>
 
+<div class="toast collapse opacity1" id="collapseExample">
+  <div class="toast-body">
 
+  </div>
+ </div>
+
+<div class="toast collapse opacity1" id="collapseExample1">
+  <div class="toast-body">
+
+  </div>
+</div>
 
 <app-adminheader></app-adminheader>
+<div class="sidebarContainer">
+<app-leftnav></app-leftnav>
+</div>
+
+
+<div class="pageContent " style="margin-top: 50px;">
+  <main id="main" class="main">
+    <div id="sideBarContent" class="container-fluid pe-5 ps-6">
+
+      <section class="section dashboard borrowers">
+
+
+     
+       
+          <div class="container " >
 
 <div class="row hik">
 
-    <div class="col-2 mt-5">
-        <app-leftnav></app-leftnav>
-
-    </div>
-
-    <div class="col-10 mt-5">
+    <div class=" mt-5">
 
 
 
@@ -303,6 +323,7 @@
     </div>
 </div>
 
+          
 
 
 
@@ -397,4 +418,11 @@
       </div>
     </div>
   </div>
+</div>
+
+</div>
+
+</section>
+</div>
+</main>
 </div>
