--- a/src/app/dashboard/manageteam/manageteam.component.html
+++ b/src/app/dashboard/manageteam/manageteam.component.html
@@ -13,14 +13,14 @@
 <app-adminheader></app-adminheader>
   
   <div class="sidebarContainer">
+<app-leftnav></app-leftnav>
  
     </div>
-    <div class="pageContent">
-        <div class="col-2 mt-5">
-            <app-leftnav></app-leftnav>
-        
-          </div>
-  <section class="main-p-area pb-50" id="reload" style="margin-top: 100px;">
+    <div class="pageContent" style="margin-top: 80px;">
+    
+      <main id="main" class="main">
+        <div id="sideBarContent" class="container-fluid pe-5 ps-6">
+  <section class="section dashboard borrowers">
     <div id="sideBarContent" class="container-fluid pe-5 ps-6">
         <div class="">
           <div class="finnup__profileheader">
@@ -253,3 +253,6 @@
       </div>
   </div>
   </div>
+
+</main>
+</div>
