--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -128,10 +128,18 @@ align-items: center;
                                 <label class="form-check-label" for="veg">Veg</label>
                                 <input class="form-check-input mx-2" type="radio" name="foodPreference" id="nonVeg" value="Non Veg" [(ngModel)]="foodPreference" checked>
                                 <label class="form-check-label" for="nonVeg">Non Veg</label>
-                                <input class="form-check-input mx-2" type="radio" name="foodPreference" id="both" value="Both" [(ngModel)]="foodPreference" checked>
-                                <label class="form-check-label" for="nonVeg">Both</label>
+                                <!-- <input class="form-check-input mx-2" type="radio" name="foodPreference" id="both" value="Both" [(ngModel)]="foodPreference" checked>
+                                <label class="form-check-label" for="nonVeg">Both</label> -->
                               
                               
+
+                              
+                                
+
+                                
+
+
+
                             </div>
     
                             
