--- a/src/app/videos/videospagelist/videospagelist.component.html
+++ b/src/app/videos/videospagelist/videospagelist.component.html
@@ -260,7 +260,8 @@
                                 </h2>
                               </div>
                               <div class="col-12">
-                                <p> So rfgerfgverfgverfgvergvuj</p>
+                                <p>                             Italian food is always a matter of regional pride. But if one were to try and sum up this diverse cuisine
+                                </p>
                               </div>
                             </div>
                           
@@ -305,7 +306,8 @@
                                 </h2>
                               </div>
                               <div class="col-12">
-                                <p> So rfgerfgverfgverfgvergvuj</p>
+                                <p>                             Italian food is always a matter of regional pride. But if one were to try and sum up this diverse cuisine
+                                </p>
                               </div>
                             </div>
                           
@@ -350,7 +352,8 @@
                                 </h2>
                               </div>
                               <div class="col-12">
-                                <p> So rfgerfgverfgverfgvergvuj</p>
+                                <p>                            Italian food is always a matter of regional pride. But if one were to try and sum up this diverse cuisine
+                                </p>
                               </div>
                             </div>
                           
@@ -395,7 +398,8 @@
                                 </h2>
                               </div>
                               <div class="col-12">
-                                <p> So rfgerfgverfgverfgvergvuj</p>
+                                <p>                             Italian food is always a matter of regional pride. But if one were to try and sum up this diverse cuisine
+                                </p>
                               </div>
                             </div>
                           
@@ -439,10 +443,9 @@
                                 </h2>
                               </div>
                               <div class="col-12">
-                                <p> So rfgerfgverfgverfgvergvuj</p>
+                                <p>Italian food is always a matter of regional pride. But if one were to try and sum up this diverse cuisine                                </p>
                               </div>
                             </div>
-                          
                             <br>
                            </div>
 
