--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -19,8 +19,11 @@
         </div>
         
         <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1 bg-light py-5 px-5">
+          <div class="card">
+            <div class="card-body">
+              
             <!-- Email input -->
-            <h3 class="text-center mt-2"> Login</h3>
+            <h1 class="text-center mt-2"> Login</h1>
 
           <form #form="ngForm">
             <div class="form-outline mb-4">
@@ -57,6 +60,12 @@
             <button type="submit" class="btn btn-danger btn-lg btn-block mx-auto d-block" [disabled] = "form.invalid" (click)="onPressLogin(form)">Sign in</button>
           </form>
 
+
+        </div>
+      </div>
+
+
+      
         </div>
       </div>
     </div>
