--- a/src/app/template-edit/template-edit.component.html
+++ b/src/app/template-edit/template-edit.component.html
@@ -136,9 +136,9 @@
 
 
                                             <input class="form-check-input mx-2" type="radio" name="foodPreference"
-                                                id="veg" value="veg" [checked]="this.foodPreference=='veg'"
+                                                id="Veg" value="Veg" [checked]="this.foodPreference=='Veg'"
                                                 [(ngModel)]="foodPreference">
-                                            <label class="form-check-label" for="veg">Veg</label>
+                                            <label class="form-check-label" for="Veg">Veg</label>
                                             <input class="form-check-input mx-2" type="radio" name="foodPreference"
                                                 id="nonVeg" value="Non Veg" [checked]="foodPreference=='Non Veg'"
                                                 [(ngModel)]="foodPreference">
