--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -124,8 +124,8 @@ align-items: center;
                             </div>
                             <div class="col-lg-4 col-sm-12 ">
     
-                                <input class="form-check-input mx-2" type="radio" name="foodPreference" id="veg" value="veg" [(ngModel)]="foodPreference">
-                                <label class="form-check-label" for="veg">Veg</label>
+                                <input class="form-check-input mx-2" type="radio" name="foodPreference" id="Veg" value="Veg" [(ngModel)]="foodPreference">
+                                <label class="form-check-label" for="Veg">Veg</label>
                                 <input class="form-check-input mx-2" type="radio" name="foodPreference" id="nonVeg" value="Non Veg" [(ngModel)]="foodPreference" checked>
                                 <label class="form-check-label" for="nonVeg">Non Veg</label>
                                 <!-- <input class="form-check-input mx-2" type="radio" name="foodPreference" id="both" value="Both" [(ngModel)]="foodPreference" checked>
