Active inactive changes

--- a/src/app/common_widgets/adminheader/adminheader.component.html
+++ b/src/app/common_widgets/adminheader/adminheader.component.html
@@ -17,7 +17,7 @@
   
   <!--Add New Menu-->
   
-  <header id="admin-header" class="admin-header fixed-top d-flex align-items-center">
+  <header id="admin-header" class="admin-header fixed-top d-flex align-items-center px-5">
   
     <div class="container-fluid">
       <a class="navbar-brand">
@@ -41,7 +41,7 @@
     
     <!-- End Logo -->
 
-    <nav class="admin-header-nav ms-auto">
+    <nav class="admin-header-nav ms-auto ">
   
   
       <ul class="d-flex align-items-center">
